# FIle-Explorer-Agent

./: .gitignore  README.md  app.py  client.py  main.py  pyproject.toml  run_app.bat  test_filehandler.py
servers/: filehandler.py
